--- a/5-using_least-squares-fit.ipynb
+++ b/5-using_least-squares-fit.ipynb
@@ -397,6 +397,7 @@
     "plt.grid(which=\"major\", axis=\"both\", linestyle=\"--\")\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
+    "plt.savefig('lst.pdf')\n",
     "plt.show()"
    ]
   },
@@ -404,8 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1 Hansen, M. R., Jakobsen, H. J., Skibsted, J., $^{29}\\text{Si}$ Chemical Shift Anisotropies in Calcium Silicates from High-Field $^{29}\\text{Si}$ MAS NMR Spectroscopy, Inorg. Chem. 2003, **42**, *7*, 2368-2377. [DOI: 10.1021/ic020647f](https://doi.org/10.1021/ic020647f)\n",
-    "\n"
+    "1. Hansen, M. R., Jakobsen, H. J., Skibsted, J., $^{29}\\text{Si}$ Chemical Shift Anisotropies in Calcium Silicates from High-Field $^{29}\\text{Si}$ MAS NMR Spectroscopy, Inorg. Chem. 2003, **42**, *7*, 2368-2377. [DOI: 10.1021/ic020647f](https://doi.org/10.1021/ic020647f)"
    ]
   },
   {
