--- a/1-getting started.ipynb
+++ b/1-getting started.ipynb
@@ -36,9 +36,9 @@
    "source": [
     "# Workflow in setting up a simulation\n",
     "\n",
-    "- Create spin systems\n",
-    "- Select methods\n",
-    "- Run simulations"
+    "1. Create spin systems\n",
+    "2. Select methods\n",
+    "3. Run simulations"
    ]
   },
   {
@@ -88,14 +88,19 @@
    "source": [
     "The two main attributes of this class are the `spin_systems` and `methods` attribute\n",
     "\n",
-    "#### Step 1: Create Spin systems\n",
+    "---\n",
+    "\n",
     "``sim.spin_systems = []``\n",
     "\n",
-    "#### Step 2: Create methods\n",
+    "---\n",
+    "\n",
     "``sim.methods = []``\n",
     "\n",
-    "#### Step 3: Run the simulation\n",
-    "``sim.run()``"
+    "---\n",
+    "\n",
+    "``sim.run()``\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -119,6 +124,7 @@
     }
    },
    "source": [
+    "---\n",
     "### Create sites\n",
     "\n",
     "A Site is generically described with the following parameters.\n",
@@ -141,7 +147,8 @@
     "- **name**: An optional name.\n",
     "- **label**: An optional label.\n",
     "- **description**: An optional description.\n",
-    "\n"
+    "\n",
+    "---"
    ]
   },
   {
