--- a/6-2D-examples.ipynb
+++ b/6-2D-examples.ipynb
@@ -6,7 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install mrsimulator"
+    "!pip install mrsimulator==0.5.0.dev0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "**NOTE**\n",
+    "\n",
+    "This is the developers' version. Please use it with caution.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -25,7 +37,7 @@
    "source": [
     "## Transition query\n",
     "\n",
-    "Method objects have attribute `transition_query`, which query a spin system for the transitions that satisfy the query selection criterion. A simplified syntax for `transition_query` follows\n",
+    "Method objects have attribute transition_query, which query a spin system for the transitions that satisfy the query selection criterion. A simplified syntax for transition_query follows\n",
     "\n",
     "```tranistion_query : {'P': [-1], 'D': [0]}```\n",
     "\n",
@@ -40,6 +52,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "### In case of I = 3/2\n",
     "\n",
     "| Initial enery state ($m_i$) | Final energy state ($m_f$)   |   P   |   D  |\n",
@@ -49,7 +63,9 @@
     "| $\\left|-1/2\\right\\rangle$   | $\\left|-3/2\\right\\rangle$    | -1    |   2  |\n",
     "| $\\left|3/2\\right\\rangle$    | $\\left|-1/2\\right\\rangle$    | -2    |  -2  |\n",
     "| $\\left|1/2\\right\\rangle$    | $\\left|-3/2\\right\\rangle$    | -2    |   2  |\n",
-    "| $\\left|3/2\\right\\rangle$    | $\\left|-3/2\\right\\rangle$    | -3    |   0  |"
+    "| $\\left|3/2\\right\\rangle$    | $\\left|-3/2\\right\\rangle$    | -3    |   0  |\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -128,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3QMAS"
+    "### Triple qunatum magic-angle spinning (3QMAS)"
    ]
   },
   {
@@ -151,6 +167,7 @@
     "                \"transition_query\": {'P': [-3], 'D': [0]}\n",
     "            }]\n",
     "        },\n",
+    "        # The last spectral dimension block is the direct-dimension\n",
     "        {\n",
     "            \"count\": 256,\n",
     "            \"spectral_width\": 2e4,  # in Hz\n",
@@ -177,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# STMAS"
+    "### Satellite transition magic-angle spinning (STMAS)"
    ]
   },
   {
@@ -197,9 +214,10 @@
     "            \"reference_offset\": -1e3,  # in Hz\n",
     "            \"label\": \"Satelline transition dimension\",\n",
     "            \"events\": [{\n",
-    "                \"transition_query\": {'P': [-1], 'D': [-2, 2, 0]}\n",
+    "                \"transition_query\": {'P': [-1], 'D': [-2, 2]}\n",
     "            }]\n",
     "        },\n",
+    "        # The last spectral dimension block is the direct-dimension\n",
     "        {\n",
     "            \"count\": 256,\n",
     "            \"spectral_width\": 5e4,  # in Hz\n",
@@ -226,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# STVAS"
+    "### Satellite transition variable-angle spinning (STVAS)"
    ]
   },
   {
@@ -249,6 +267,7 @@
     "                \"transition_query\": {'P': [-1], 'D': [-2, 2, 0]}\n",
     "            }]\n",
     "        },\n",
+    "        # The last spectral dimension block is the direct-dimension\n",
     "        {\n",
     "            \"count\": 256,\n",
     "            \"spectral_width\": 3e4,  # in Hz\n",
@@ -275,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COASTER"
+    "### A correlation of anisotropies separated through echo refocusing (COASTER)"
    ]
   },
   {
@@ -298,6 +317,7 @@
     "                \"transition_query\": {'P': [3], 'D': [0]}\n",
     "            }]\n",
     "        },\n",
+    "        # The last spectral dimension block is the direct-dimension\n",
     "        {\n",
     "            \"count\": 256,\n",
     "            \"spectral_width\": 2e4,  # in Hz\n",
@@ -324,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SAS"
+    "### Switched angle spinning (SAS)"
    ]
   },
   {
@@ -347,6 +367,7 @@
     "                \"transition_query\": {'P': [-1], 'D': [0]}\n",
     "            }]\n",
     "        },\n",
+    "        # The last spectral dimension block is the direct-dimension\n",
     "        {\n",
     "            \"count\": 256,\n",
     "            \"spectral_width\": 3e4,  # in Hz\n",
