--- a/1-getting started.ipynb
+++ b/1-getting started.ipynb
@@ -331,6 +331,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BlochDecaySpectrum().to_dict_with_units()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
