--- a/6-2D-examples.ipynb
+++ b/6-2D-examples.ipynb
@@ -37,11 +37,11 @@
    "source": [
     "## Transition query\n",
     "\n",
-    "Method objects have attribute transition_query, which query a spin system for the transitions that satisfy the query selection criterion. A simplified syntax for transition_query follows\n",
+    "Method objects have attribute `transition_query`, which queries spin systems for the transitions that satisfy the query selection criterion. A simplified syntax for transition_query follows\n",
     "\n",
     "```tranistion_query : {'P': [-1], 'D': [0]}```\n",
     "\n",
-    "where `P` and `D` are a list of p and d-transition symmetry functions.\n",
+    "where `P` and `D` are a list of p and d-transition symmetry functions which follows\n",
     "\n",
     "P = [$m_f - m_i$, ...]\n",
     "\n",
@@ -56,6 +56,8 @@
     "\n",
     "### In case of I = 3/2\n",
     "\n",
+    "The table lists the value of transition symmetry function for a given transition $\\left|m_i\\right\\rangle \\rightarrow \\left|m_f\\right\\rangle$, in the case of $I=3/2$.\n",
+    "\n",
     "| Initial enery state ($m_i$) | Final energy state ($m_f$)   |   P   |   D  |\n",
     "| --------------------------- | ---------------------------- | ----- | ---- |\n",
     "| $\\left|3/2\\right\\rangle$    | $\\left|1/2\\right\\rangle$     | -1    |  -2  |\n",
@@ -65,7 +67,11 @@
     "| $\\left|1/2\\right\\rangle$    | $\\left|-3/2\\right\\rangle$    | -2    |   2  |\n",
     "| $\\left|3/2\\right\\rangle$    | $\\left|-3/2\\right\\rangle$    | -3    |   0  |\n",
     "\n",
-    "---"
+    "---\n",
+    "\n",
+    "Read more on transition symmetry functions at Grandinetti *et. al* [1]\n",
+    "\n",
+    "1. Grandinetti, P. J., Ash, J. T., Trease, N. M. Symmetry pathways in solid-state NMR, PNMRS 2011 59, 2, 121-196. [DOI: 10.1016/j.pnmrs.2010.11.003](https://doi.org/10.1016/j.pnmrs.2010.11.003)"
    ]
   },
   {
@@ -134,7 +140,7 @@
     "    \n",
     "    # plot the simulation\n",
     "    ax = plt.gca(projection='csdm')\n",
-    "    ax.imshow(data, aspect='auto', cmap='gist_ncar_r')\n",
+    "    ax.imshow(data/data.max(), aspect='auto', cmap='gist_ncar_r')\n",
     "    ax.invert_xaxis()\n",
     "    ax.invert_yaxis()\n",
     "    plt.show()"
@@ -153,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "method1 = MQVAS(\n",
+    "mqmas = MQVAS(\n",
     "    channels=[\"87Rb\"],\n",
     "    magnetic_flux_density=9.4,  # in T\n",
     "    rotor_angle = 54.735 * 3.1415 / 180, # in rads\n",
@@ -187,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "update(method1)"
+    "update(mqmas)"
    ]
   },
   {
@@ -203,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "method2 = MQVAS(\n",
+    "stmas = MQVAS(\n",
     "    channels=[\"87Rb\"],\n",
     "    magnetic_flux_density=4.2,  # in T\n",
     "    rotor_angle = 54.735 * 3.1415 / 180, # in rads\n",
@@ -237,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "update(method2)"
+    "update(stmas)"
    ]
   },
   {
@@ -253,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "method3 = MQVAS(\n",
+    "stvas = MQVAS(\n",
     "    channels=[\"87Rb\"],\n",
     "    magnetic_flux_density=4.2,  # in T\n",
     "    rotor_angle = 50 * 3.1415 / 180, # in rads  <--------\n",
@@ -264,7 +270,7 @@
     "            \"reference_offset\": 1e4,  # in Hz\n",
     "            \"label\": \"Satelline transition dimension\",\n",
     "            \"events\": [{\n",
-    "                \"transition_query\": {'P': [-1], 'D': [-2, 2, 0]}\n",
+    "                \"transition_query\": {'P': [-1], 'D': [-2, 2]}\n",
     "            }]\n",
     "        },\n",
     "        # The last spectral dimension block is the direct-dimension\n",
@@ -287,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "update(method3)"
+    "update(stvas)"
    ]
   },
   {
@@ -303,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "method4 = MQVAS(\n",
+    "coaster = MQVAS(\n",
     "    channels=[\"87Rb\"],\n",
     "    magnetic_flux_density=9.4,  # in T\n",
     "    rotor_angle = 70.12 * 3.1415 / 180, # in rads\n",
@@ -337,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "update(method4)"
+    "update(coaster)"
    ]
   },
   {
@@ -353,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "method5 = MQVAS(\n",
+    "SAS = MQVAS(\n",
     "    channels=[\"87Rb\"],\n",
     "    magnetic_flux_density=4.2,  # in T\n",
     "    spectral_dimensions=[\n",
@@ -388,7 +394,146 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "update(method5)"
+    "update(SAS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic angle spinning (DAS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DAS = MQVAS(\n",
+    "    channels=[\"87Rb\"],\n",
+    "    magnetic_flux_density=4.2,  # in T\n",
+    "    spectral_dimensions=[\n",
+    "        {\n",
+    "            \"count\": 256,\n",
+    "            \"spectral_width\": 2e4,  # in Hz\n",
+    "            \"reference_offset\": -5e3,  # in Hz\n",
+    "            \"label\": \"isotropic dimension\",\n",
+    "            \"events\": [\n",
+    "                {\n",
+    "                    \"fraction\": 0.5,\n",
+    "                    \"rotor_angle\": 37.38 * 3.1415 / 180, # in rads\n",
+    "                    \"transition_query\": {'P': [-1], 'D': [0]}\n",
+    "                },\n",
+    "                {\n",
+    "                    \"fraction\": 0.5,\n",
+    "                    \"rotor_angle\": 79.19 * 3.1415 / 180, # in rads\n",
+    "                    \"transition_query\": {'P': [-1], 'D': [0]}\n",
+    "                }\n",
+    "            ]\n",
+    "        },\n",
+    "        # The last spectral dimension block is the direct-dimension\n",
+    "        {\n",
+    "            \"count\": 256,\n",
+    "            \"spectral_width\": 3e4,  # in Hz\n",
+    "            \"reference_offset\": -7e3,  # in Hz\n",
+    "            \"label\": \"MAS dimension\",\n",
+    "            \"events\": [{\n",
+    "                \"rotor_angle\": 54.735 * 3.1415 / 180, # in rads\n",
+    "                \"transition_query\": {'P': [-1], 'D': [0]}\n",
+    "            }]\n",
+    "        },\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update(DAS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DAS example for Coesite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim = Simulator()\n",
+    "\n",
+    "# load the spin systems from the file\n",
+    "filename = \"https://raw.githubusercontent.com/DeepanshS/mrsimulator-tutorial/master/coesite.mrsys\"\n",
+    "sim.load_spin_systems(filename)\n",
+    "\n",
+    "# Create a DAS method\n",
+    "method = MQVAS(\n",
+    "    channels=[\"17O\"],\n",
+    "    magnetic_flux_density=11.7,  # in T\n",
+    "    spectral_dimensions=[\n",
+    "        {\n",
+    "            \"count\": 256,\n",
+    "            \"spectral_width\": 8e3,  # in Hz\n",
+    "            \"reference_offset\": 0,  # in Hz\n",
+    "            \"label\": \"DAS isotropic dimension\",\n",
+    "            \"events\": [\n",
+    "                {\n",
+    "                    \"fraction\": 0.5,\n",
+    "                    \"rotor_angle\": 37.38 * 3.1415 / 180, # in rads\n",
+    "                    \"transition_query\": {'P': [-1], 'D': [0]}\n",
+    "                },\n",
+    "                {\n",
+    "                    \"fraction\": 0.5,\n",
+    "                    \"rotor_angle\": 79.19 * 3.1415 / 180, # in rads\n",
+    "                    \"transition_query\": {'P': [-1], 'D': [0]}\n",
+    "                }\n",
+    "            ]\n",
+    "        },\n",
+    "        # The last spectral dimension block is the direct-dimension\n",
+    "        {\n",
+    "            \"count\": 256,\n",
+    "            \"spectral_width\": 2e4,  # in Hz\n",
+    "            \"reference_offset\": 0,  # in Hz\n",
+    "            \"label\": \"MAS dimension\",\n",
+    "            \"events\": [{\n",
+    "                \"rotor_angle\": 54.735 * 3.1415 / 180, # in rads\n",
+    "                \"transition_query\": {'P': [-1], 'D': [0]}\n",
+    "            }]\n",
+    "        },\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "# Assign DAS method to the simulator object\n",
+    "sim.methods = [method]\n",
+    "\n",
+    "# run the simulation\n",
+    "sim.run()\n",
+    "\n",
+    "# get the simulation data\n",
+    "data = sim.methods[0].simulation\n",
+    "    \n",
+    "# plot the simulation data\n",
+    "ax = plt.gca(projection='csdm')\n",
+    "ax.imshow(data/data.max(), aspect='auto', cmap='gist_ncar_r', vmax=0.1)\n",
+    "ax.invert_xaxis()\n",
+    "ax.invert_yaxis()\n",
+    "plt.show()"
    ]
   },
   {
