--- a/5-using_least-squares-fit.ipynb
+++ b/5-using_least-squares-fit.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "filename = \"Rb_site.csdf\"\n",
+    "filename = \"https://raw.githubusercontent.com/DeepanshS/mrsimulator-tutorial/master/Rb_site.csdf\"\n",
     "synthetic_experiment = cp.load(filename)\n",
     "\n",
     "# convert the dimension coordinates from Hz to ppm\n",
