add missing links.

--- a/4-spin-system-import.ipynb
+++ b/4-spin-system-import.ipynb
@@ -175,6 +175,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "**Also see**\n",
+    "\n",
+    "NMR spectra simulation for [amorphous materials](https://mrsimulator.readthedocs.io/en/stable/auto_examples/index.html#d-nmr-simulation).\n",
+    "\n",
+    "----"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
