--- a/1-getting started.ipynb
+++ b/1-getting started.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Installation\n",
     "\n",
-    "When using the mrsimulator on Google colab, type the following in the first cell."
+    "When using the mrsimulator on Google colab, type the following in the first cell. For installing on local system, read [here](https://mrsimulator.readthedocs.io/en/stable/installation.html)."
    ]
   },
   {
